--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,7 @@
               }
             ],
             "styles": [
+              "node_modules/bulma/css/bulma.css",
               "src/styles.css"
             ],
             "scripts": []
