--- a/.hintrc
+++ b/.hintrc
@@ -28,6 +28,7 @@
       }
     ],
     "typescript-config/consistent-casing": "off",
-    "axe/forms": "off"
+    "axe/forms": "off",
+    "button-type": "off"
   }
 }
